<resources>
    <string name="app_name">marcarHora</string>
    <string name="minhas_reservas">Minha Reservas</string>
    <string name="crie_resevas">Escolha seus procedimentos</string>
    <string name="prece_cabelo">Cortes</string>
    <string name="mid">Mid fade</string>
    <string name="high">High fade</string>
    <string name="low">Low fade</string>
    <string name="social">Social</string>
    <string name="barba">Barba</string>
    <string name="sombrancelha">Sombrancelha</string>
    <string name="limpesa">Limpesa de pele</string>
    <string name="quimicos">Quimicos</string>
    <string name="prog">Progueciva</string>
    <string name="titura">Tintura</string>
    <string name="grahca">Gracha</string>
    <string name="platinado">Platinado</string>
    <string name="horarios">Horarios disponiveis</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="cadatre_dados">cadastre seus dados aqui</string>
    <string name="escolha_data">Escolha a data</string>
    <string name="data_domingo">Proximo Daomingo</string>
    <string name="data_segunda">Proximo Segunda</string>
    <string name="data_terça">Proximo Terça</string>
    <string name="data_quarta">Proximo Quarta</string>
    <string name="data_quinta">Proximo Quirta</string>
    <string name="data_sexta">Proximo Sexta</string>
    <string name="consultar">Consultar</string>
    <string name="todo">Todo</string>
    <string name="dia">Dia</string>
    <string name="hora">Hora</string>
    <string name="hora8">8:00</string>
    <string name="hora9">9:00</string>
    <string name="hora10">10:00</string>
    <string name="hora11">11:00</string>
    <string name="hora12">12:00</string>
    <string name="hora13">13:00</string>
    <string name="hora14">14:00</string>
    <string name="hora15">15:00</string>
    <string name="hora16">16:00</string>
    <string name="hora17">17:00</string>
    <string name="hora18">18:00</string>
    <string name="hora19">19:00</string>
    <string name="hora20">20:00</string>
    <string name="hora21">21:00</string>
    <string name="finalizar">Finalizar Reserva</string>
    <string name="cadastrar_pesssoas">Cadastrar dados pessoais</string>
</resources>