<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#3ba0e2"
        >


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <LinearLayout
            android:id="@+id/layoutCorFundo"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:gravity="center" >


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agbalumo"
                android:text="@string/cadastrar_pesssoas"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffff" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutImagemFundo"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/laranja"
            android:orientation="horizontal"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadatre_dados"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            android:fontFamily="@font/afacad"
            android:layout_marginLeft="100dp"
            />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/nome"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ednome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nome"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
            tools:targetApi="o">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/telefone"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/telefone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:targetApi="o"
            tools:ignore="VisualLintTextFieldSize" />
        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="text|textEmailAddress"
            android:minHeight="48dp"
            tools:targetApi="o"
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/btcadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadatre_dados"
                style="@style/button_raius" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
