<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ActivityConsultar">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3ba0e2" >

        <LinearLayout
            android:id="@+id/layoutCorFundo"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:background="#749ff5"
            android:backgroundTint="@color/black"
            >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Consultar Reservas"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:fontFamily="@font/agbalumo"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/laranja"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/laranja">
    </LinearLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="Corte"
        android:layout_marginLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtcorte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginLeft="15dp"
        android:text="Corte"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2a58b4"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginLeft="15dp"
        android:text="@string/barba"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtbarba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginLeft="15dp"
        android:text="@string/barba"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2a58b4"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginLeft="15dp"
        android:text="@string/sombrancelha"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtsombrancelha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginLeft="15dp"
        android:text="@string/sombrancelha"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2a58b4"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="-220dp"
        android:text="@string/limpesa"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/txtlimpesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginLeft="200dp"
        android:text="@string/limpesa"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2a58b4"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginLeft="200dp"
        android:text="@string/quimicos"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/txtquimico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/quimicos"
        android:layout_marginLeft="200dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2a58b4"
        android:textSize="18sp" />
    <LinearLayout
        android:id="@+id/lldescricao"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@color/cinza_back"
        >
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Data e Hora"
            style="@style/textcinza"
            android:textColor="@color/cinza_text"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/dia"
            android:layout_marginStart="30dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/txtdia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/dia"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#2a58b4"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/hora"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textSize="18sp" />
        <TextView
        android:id="@+id/txthora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/hora"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2a58b4"
        android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:paddingTop="15dp" >

        <ImageView
            android:id="@+id/imgprimeiro"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/botao_primeiro" />

        <ImageView
            android:id="@+id/imganterior"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/botao_anterior" />

        <ImageView
            android:id="@+id/imgproximo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/botao_proximo" />

        <ImageView
            android:id="@+id/imgultimo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/botao_ultimo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/txtstatus_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="status"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_delet_edit"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        >

        <Button
            android:layout_width="63dp"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="13dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/delet1" />

        <Button
            android:layout_width="70dp"
            android:layout_height="71dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/editar"
            android:backgroundTint="@color/black" />


    </RelativeLayout>
</LinearLayout>
