<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityEditar" >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3ba0e2" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <LinearLayout
            android:id="@+id/layoutCorFundo"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@color/black"
            android:gravity="center" >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" alterar dados"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:fontFamily="@font/agbalumo"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/laranja">

    </RelativeLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="Corte" />

    <EditText
        android:id="@+id/txtcorte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint=" digite seu procedimento"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="Barba" />

    <EditText
        android:id="@+id/txtbarba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="digite seu procedimento"
        android:importantForAutofill="no"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="@string/sombrancelha" />

    <EditText
        android:id="@+id/txtsombrancelha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="digite seu Sombrancelha"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="@string/limpesa" />

    <EditText
        android:id="@+id/txtlimpesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint=" digite seu limpesa"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="@string/quimicos" />

    <EditText
        android:id="@+id/txtquimico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="digite seu procedimento"
        android:importantForAutofill="no"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="Data" />

    <EditText
        android:id="@+id/txtdia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="digite sua Data"
        android:importantForAutofill="no"
        android:inputType="text" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="@string/hora" />

    <EditText
        android:id="@+id/txthora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="digite sua Hora"
        android:importantForAutofill="no"
        android:inputType="time" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/imgprimeiro"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/botao_primeiro" />

        <ImageView
            android:id="@+id/imganterior"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/botao_anterior" />

        <ImageView
            android:id="@+id/imgproximo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/botao_proximo" />

        <ImageView
            android:id="@+id/imgultimo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/botao_ultimo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="0dp" >

        <TextView
            android:id="@+id/txtstatus_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="status"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <Button
            android:id="@+id/btalterardados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="alterar dados" />
    </LinearLayout>
</LinearLayout>